--- a/lab_7/CMakeLists.txt
+++ b/lab_7/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.15) # Проверка версии CMake.
 									 # старее указаной, произайдёт аварийный выход.
 
 set(PROJECT_NAME example) 			 # задать значение PROJECT_NAME		 
-project("${PROJECT_NAME}")           # установить имя проекта
+project(lab_7)           # установить имя проекта
 
 
 set(CMAKE_CXX_STANDARD 17)			 # устанавливаем 17 стандарт языка
@@ -11,4 +11,4 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 # Сказать программе, что должен быть исполняемый файл
-add_executable("${PROJECT_NAME}" main.cpp functions.cpp)
+add_executable(lab_7 main.cpp functions.cpp)
